; ModuleID = '/home/carl/AnghaBench/linux/fs/notify/extr_group.c_fsnotify_final_destroy_group.c'
source_filename = "/home/carl/AnghaBench/linux/fs/notify/extr_group.c_fsnotify_final_destroy_group.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fsnotify_group = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.fsnotify_group*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fsnotify_group*)* @fsnotify_final_destroy_group to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fsnotify_final_destroy_group(%struct.fsnotify_group* %0) #0 {
  %2 = alloca %struct.fsnotify_group*, align 8
  store %struct.fsnotify_group* %0, %struct.fsnotify_group** %2, align 8
  %3 = load %struct.fsnotify_group*, %struct.fsnotify_group** %2, align 8
  %4 = getelementptr inbounds %struct.fsnotify_group, %struct.fsnotify_group* %3, i32 0, i32 1
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32 (%struct.fsnotify_group*)*, i32 (%struct.fsnotify_group*)** %6, align 8
  %8 = icmp ne i32 (%struct.fsnotify_group*)* %7, null
  br i1 %8, label %9, label %17

9:                                                ; preds = %1
  %10 = load %struct.fsnotify_group*, %struct.fsnotify_group** %2, align 8
  %11 = getelementptr inbounds %struct.fsnotify_group, %struct.fsnotify_group* %10, i32 0, i32 1
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32 (%struct.fsnotify_group*)*, i32 (%struct.fsnotify_group*)** %13, align 8
  %15 = load %struct.fsnotify_group*, %struct.fsnotify_group** %2, align 8
  %16 = call i32 %14(%struct.fsnotify_group* %15)
  br label %17

17:                                               ; preds = %9, %1
  %18 = load %struct.fsnotify_group*, %struct.fsnotify_group** %2, align 8
  %19 = getelementptr inbounds %struct.fsnotify_group, %struct.fsnotify_group* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @mem_cgroup_put(i32 %20)
  %22 = load %struct.fsnotify_group*, %struct.fsnotify_group** %2, align 8
  %23 = call i32 @kfree(%struct.fsnotify_group* %22)
  ret void
}

declare dso_local i32 @mem_cgroup_put(i32) #1

declare dso_local i32 @kfree(%struct.fsnotify_group*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
